--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Groupe Skella</title>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://pub-f40ae46f468a42d88289e08f9bb73df6.r2.dev/uploads/d6efbb75-ca23-4c78-a557-aea58e1539a6-S no shade.png" />
+    <meta name="google-site-verification" content="ORkgyvgge72j43oTx0n0FPQrHcGXcMCoUFK8zuSaFUI" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Skella</title>
+    <meta name='description' content="Découvrez Skella, votre expert en piscines creusées en fibre de verre et aménagements paysagers haut de gamme à Montréal. Nous offrons un service clé en main, de la conception à l'installation, pour transformer votre espace extérieur en un havre de paix. Contactez-nous pour un devis personnalisé et une expérience sur-mesure." />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16871341515"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-16871341515')
+    </script>
+    <meta name="google-site-verification" content="-YydiCsZ_0DliHPY3Ua-AnPwesjxbLO0BPcpd2tkpJQ" />
   </head>
   <body>
     <div id="root"></div>
